syntax = "proto3";

package com.nikitahohulia.api.internal.v2.usersvc.commonmodels.user;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message User{
  optional string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  repeated string subscriptions = 5;
  optional string publisherId = 6;
}

message UserList {
  repeated User users = 1;
}
